--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -1,5 +1,10 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
+    <div>
+      <p>
+        <%= link_to "Add New Competition", new_game_competition_path(@game), class: "btn btn-primary" %>
+      </p>
+    </div>
     <% @competitions.each do |competition| %>
       <h2><%= competition.name %></h2>
       <p>
