--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -1,8 +1,22 @@
-<%= form_tag game_competition_results_import_path(@game, @competition), multipart: true do %>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <% if @competition.results.length > 0 %>
+      <p>
+        There are already results for this competition.
+      </p>
+    <% else %>
+      <p>
+        The .csv of event results must be in the following format: <em>place, name, points</em>
+      </p>
+      <%= form_tag game_competition_results_import_path(@game, @competition), multipart: true do %>
+        <div class="form-group required">
+          <%= label_tag :file, "File", class: "control-label" %>
+          <%= file_field_tag :file, type: :file, accept: ".csv", required: true, class: "form-control" %>
+        </div>
 
-  <%= label_tag :file %>
-  <%= file_field_tag :file,required: true %>
+        <%= submit_tag "Add Results", class: "btn btn-primary" %>
 
-  <%= submit_tag "Add Results" %>
-
-<% end %>
+      <% end %>
+    <% end %>
+  </div>
+</div>
