draft picks now advance properly, changed handling of hiding pick links

--- a/app/views/leagues/_info.html.erb
+++ b/app/views/leagues/_info.html.erb
@@ -10,6 +10,9 @@
     <% else %>
       <%= link_to "Set a Time", game_competition_league_draft_path(@competition.game, @competition, @league, @league.draft), class: "btn btn-sm btn-info" %>
     <% end %>
+    <% if !@league.draft.completed && !@league.draft.active  %>
+      <%= link_to "Start Draft", game_competition_league_draft_start_path(@competition.game, @competition, @league, @league.draft), method: "post", class: "btn btn-sm btn-success" %>
+    <% end %>
   </p>
   <p>
     Event Start: <%= @league.leagueable.date.localtime.strftime("%m/%d/%Y") %>
