--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -113,9 +113,23 @@
   <% elsif @draft.active || (@draft.start_time && Time.now > @draft.start_time) %>
   <div id="draft-details-container" class="row">
     <div id="players" class="col-md-6">
-      <h4>
-        Available Players
-      </h4>
+      <div class="available-players-title">
+        <h4>
+          Available Players
+        </h4>
+        <%= button_tag "?", onclick: "$('.available-players-instructions').toggle()", class: "btn btn-sm btn-secondary" %>
+      </div>
+      <div class="available-players-instructions">
+        <p>
+          Below are the players that are still available to draft. Currently, these are restricted to players that are (or have been) on a Pro Tour team in the Pro Tour Team Series.
+        </p>
+        <p>
+          The "Points" column represents the average number of Match Points a player has earned per Pro Tour since the Team Series started. The "PT" column lists the number of Pro Tours each player has attended since the start of the Team Series.
+        </p>
+        <p onclick="$('.available-players-instructions').toggle()">
+          <em>(Hide)</em>
+        </p>
+      </div>
       <div id="react-player-table" data="<%= @draft.id %>">
       </div>
       <%= javascript_pack_tag "available_player_table" %>
