added more draft instructions

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -126,6 +126,9 @@
         <p>
           The "Points" column represents the average number of Match Points a player has earned per Pro Tour since the Team Series started. The "PT" column lists the number of Pro Tours each player has attended since the start of the Team Series.
         </p>
+        <p>
+          You can sort each column by clicking on it. You can also add secondary  sorting by choosing the main column you'd like sort by, then holding the SHIFT key and selecting the column you'd like to use as a secondary sort. 
+        </p>
         <p onclick="$('.available-players-instructions').toggle()">
           <em>(Hide)</em>
         </p>
