--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@ html {
       margin: 0;
       padding: 0;
       width: 100%;
+      position: relative;
       .container-fluid {
         margin-top: 1rem;
       }
