--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -272,9 +272,19 @@ html {
 }
 
 // Warnings
-.alert-danger {
-  background-color: $danger;
-}
-.alert-success {
-  background-color: $success;
+.alert {
+  position: absolute;
+  top: 10px;
+  z-index: 100;
+  box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+  transition: all .55s ease-in-out;
+  &:hover {
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+  }
+  &.alert-danger {
+    background-color: $danger;
+  }
+  &.alert-success {
+    background-color: $success;
+  }
 }
