--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -1,15 +1,85 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
     <div>
+      <h2>Active <%= @game.name %> Events</h2>
       <p>
-        <%= link_to "Add New Competition", new_game_competition_path(@game), class: "btn btn-primary" %>
+        <%= link_to "Add New Competition", new_game_competition_path(@game), class: "btn btn-sm btn-light" if current_user.admin %>
       </p>
     </div>
-    <% @competitions.each do |competition| %>
-      <h2><%= competition.name %></h2>
-      <p>
-        <%= link_to "Create league!", new_game_competition_league_path(competition.game, competition) %>
-      </p>
-    <% end %>
+    <div>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>
+              Name
+            </th>
+            <th>
+              Date
+            </th>
+            <th>
+
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @competitions.where("date >= ?", Date.today).each do |competition| %>
+            <tr>
+              <td>
+                <%= competition.name %>
+              </td>
+              <td>
+                <%= competition.date.localtime.strftime("%m/%d/%Y") %>
+              </td>
+              <td>
+                <%= link_to "Create League!", new_game_competition_league_path(competition.game, competition), class: "btn btn-primary" %>
+              </td>
+            </tr>
+            <h3></h3>
+            <p>
+
+            </p>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div>
+      <h2>Previous <%= @game.name %> Events</h2>
+    </div>
+    <div>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>
+              Name
+            </th>
+            <th>
+              Date
+            </th>
+            <th>
+
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @competitions.order(date: :desc).each do |competition| %>
+            <tr>
+              <td>
+                <%= competition.name %>
+              </td>
+              <td>
+                <%= competition.date.localtime.strftime("%m/%d/%Y") %>
+              </td>
+              <td>
+                <%= link_to "Results", game_competition_results_path(competition.game, competition), class: "btn btn-primary" %>
+              </td>
+            </tr>
+            <h3></h3>
+            <p>
+
+            </p>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
