--- a/app/views/leagues/_info.html.erb
+++ b/app/views/leagues/_info.html.erb
@@ -8,11 +8,13 @@
     <% if @league.draft.start_time %>
       <%= @league.draft.start_time.localtime.strftime("%m/%d/%Y at %I:%M%p") %>
     <% else %>
-      <% if current_user == @league.admin %>
+      <% if current_user == @league.admin || current_user.admin %>
         <%= link_to "Set a Time", game_competition_league_draft_path(@competition.game, @competition, @league, @league.draft), class: "btn btn-sm btn-info" %>
+      <% else %>
+        No time has been set
       <% end %>
     <% end %>
-    <% if !@league.draft.completed && !@league.draft.active && current_user == @league.admin %>
+    <% if !@league.draft.completed && !@league.draft.active && (current_user == @league.admin || current_user.admin) %>
       <%= link_to "Start Draft", game_competition_league_draft_start_path(@competition.game, @competition, @league, @league.draft), method: "post", class: "btn btn-sm btn-success" %>
     <% end %>
   </p>
