--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,10 +1,17 @@
-<%= form_for [@team.league.leagueable.game, @team.league.leagueable, @team.league, @team] do |f| %>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <h2>Edit <%= @team.name %></h2>
+    <%= form_for [@team.league.leagueable.game, @team.league.leagueable, @team.league, @team] do |f| %>
 
-  <p>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </p>
+      <div class="form-group required">
+        <%= f.label :name, class: "control-label" %>
+        <%= f.text_field :name, required: true, class: "form-control" %>
+      </div>
 
-  <%= f.submit "Update Team" %>
+      <div class="actions">
+        <%= f.submit "Update Team", class: "btn btn-primary" %>
+      </div>
 
-<% end %>
+    <% end %>
+  </div>
+</div>
