--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -13,7 +13,15 @@
 
     <%= form_for [@competition.game, @competition, @league] do |f| %>
 
-      <%= f.submit "Create League", class: "btn btn-primary" %>
+      <div class="form-group required">
+        <%= f.label :num_draft_rounds, "Number of Rounds", class: "control-label" %>
+        <%= f.number_field :num_draft_rounds, min: 1, max: 12, required: true, class: "form-control" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Create League", class: "btn btn-primary" %>
+      </div>
+
 
     <% end %>
   </div>
