--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -34,10 +34,6 @@
                 <%= link_to "Create League!", new_game_competition_league_path(competition.game, competition), class: "btn btn-primary" %>
               </td>
             </tr>
-            <h3></h3>
-            <p>
-
-            </p>
           <% end %>
         </tbody>
       </table>
@@ -58,6 +54,11 @@
             <th>
 
             </th>
+            <% if current_user.admin %>
+              <th>
+
+              </th>
+            <% end %>
           </tr>
         </thead>
         <tbody>
@@ -72,11 +73,12 @@
               <td>
                 <%= link_to "Results", game_competition_results_path(competition.game, competition), class: "btn btn-primary" %>
               </td>
+              <% if current_user.admin %>
+                <td>
+                  <%= link_to "View", game_competition_path(@game, competition), class: "btn btn-secondary" %>
+                </td>
+              <% end %>
             </tr>
-            <h3></h3>
-            <p>
-
-            </p>
           <% end %>
         </tbody>
       </table>
