--- a/app/views/leagues/edit.html.erb
+++ b/app/views/leagues/edit.html.erb
@@ -9,11 +9,11 @@
         <%= f.label :num_draft_rounds, "Number of Rounds", class: "control-label" %>
         <%= f.number_field :num_draft_rounds, min: 1, max: 12, required: true, class: "form-control" %>
       </div>
-      <div class="form-group required">
+      <div class="form-group">
         <%= f.fields_for :draft do |ff| %>
           <div>
             <%= ff.label :start_time, "Start Time", class: "control-label" %>
-            <%= ff.datetime_field :start_time, required: true, class: "form-control" %>
+            <%= ff.datetime_field :start_time, required: false, class: "form-control" %>
           </div>
         <% end %>
       </div>
