--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -1,26 +1,19 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
     <h2><%= @competition.name %></h2>
-    <%= form_for [@game, @competition] do |f| %>
-      <div class="form-group required">
-        <%= f.label :name, class: "control-label" %>
-        <%= f.text_field :name, required: true, class: "form-control" %>
-      </div>
-      <div class="form-group required">
-        <%= f.label :slug, class: "control-label" %>
-        <%= f.text_field :slug, required: true, class: "form-control" %>
-      </div>
-      <div class="form-group required">
-        <%= f.label :date, class: "control-label" %>
-        <%= f.datetime_field :date, required: true, class: "form-control" %>
-      </div>
-      <div class="form-group required">
-        <%= f.label :location, class: "control-label" %>
-        <%= f.text_field :location, required: true, class: "form-control" %>
-      </div>
-      <div class="actions">
-        <%= f.submit "Update", class: "btn btn-primary" %>
-      </div>
+    <% if current_user.admin %>
+      <p>
+        <%= link_to "Edit", edit_game_competition_path(@game, @competition), class: "btn btn-sm btn-secondary" %>
+      </p>
     <% end %>
+    <p>
+      Date: <%= @competition.date.localtime.strftime("%m/%d/%Y") %>
+    </p>
+    <p>
+      Location: <%= @competition.location %>
+    </p>
+    <p>
+      Score as of Round: <%= @competition.score_as_of_round %>
+    </p>
   </div>
 </div>
