--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -7,36 +7,42 @@
       </p>
     </div>
     <div>
-      <table class="table table-bordered table-hover">
-        <thead>
-          <tr>
-            <th>
-              Name
-            </th>
-            <th>
-              Date
-            </th>
-            <th>
-
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @competitions.where("name = ?", "Pro Tour Dominaria").each do |competition| %>
+      <% if @competitions.where("date >= ?", Date.today).length > 0 %>
+        <table class="table table-bordered table-hover">
+          <thead>
             <tr>
-              <td>
-                <%= competition.name %>
-              </td>
-              <td>
-                <%= competition.date.localtime.strftime("%m/%d/%Y") %>
-              </td>
-              <td>
-                <%= link_to "Create League!", new_game_competition_league_path(competition.game, competition), class: "btn btn-primary" %>
-              </td>
+              <th>
+                Name
+              </th>
+              <th>
+                Date
+              </th>
+              <th>
+
+              </th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            <% @competitions.where("date >= ?", Date.today).each do |competition| %>
+              <tr>
+                <td>
+                  <%= competition.name %>
+                </td>
+                <td>
+                  <%= competition.date.localtime.strftime("%m/%d/%Y") %>
+                </td>
+                <td>
+                  <%= link_to "Create League!", new_game_competition_league_path(competition.game, competition), class: "btn btn-primary" %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% else %>
+        <p>
+          There are no active events. Check back soon!
+        </p>
+      <% end %>
     </div>
     <div>
       <h2>Previous <%= @game.name %> Events</h2>
