--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
         </li>
       <% end %>
       <li class="nav-item">
-        <%= link_to "Start a League", games_path, class: "nav-link" %>
+        <%= link_to "Start a League", game_competitions_path(Game.find_by(name: "Magic: the Gathering")), class: "nav-link" %>
       </li>
       <% if current_user %>
         <li class="nav-item dropdown">
